force-app/main/default/objects/Checklist__c/fields/Access_charges__c.field-meta.xml
<CustomField>
    <fullName>Access_charges__c</fullName>
    <label>Access charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>