force-app/main/default/objects/Checklist__c/fields/Access_of_CSDU_Available__c.field-meta.xml
<CustomField>
    <fullName>Access_of_CSDU_Available__c</fullName>
    <label>Access of CSDU Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>