force-app/main/default/objects/Checklist__c/fields/All_Organizations_Eligible__c.field-meta.xml
<CustomField>
    <fullName>All_Organizations_Eligible__c</fullName>
    <label>All Organizations Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>