force-app/main/default/objects/Checklist__c/fields/Animal_Number_Calculation_Provided__c.field-meta.xml
<CustomField>
    <fullName>Animal_Number_Calculation_Provided__c</fullName>
    <label>Animal Number Calculation Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>