force-app/main/default/objects/Checklist__c/fields/Animals__c.field-meta.xml
<CustomField>
    <fullName>Animals__c</fullName>
    <label>Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>