force-app/main/default/objects/Checklist__c/fields/Any_Additional_Concern__c.field-meta.xml
<CustomField>
    <fullName>Any_Additional_Concern__c</fullName>
    <label>Any Additional Concern</label>
    <type>TextArea</type>
</CustomField>