force-app/main/default/objects/Checklist__c/fields/Any_Experiment_on_big_Animals__c.field-meta.xml
<CustomField>
    <fullName>Any_Experiment_on_big_Animals__c</fullName>
    <label>Any Experiment on big Animals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>