force-app/main/default/objects/Checklist__c/fields/Appropriate_Undertaking_from_Institution__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_Undertaking_from_Institution__c</fullName>
    <label>Appropriate Undertaking from Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>