force-app/main/default/objects/Checklist__c/fields/Clinical_Trial_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Proposed__c</fullName>
    <label>Clinical Trial Proposed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>