force-app/main/default/objects/Checklist__c/fields/CO_2_Name_and_Organisation__c.field-meta.xml
<CustomField>
    <fullName>CO_2_Name_and_Organisation__c</fullName>
    <label>CO PI 2 Name and Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>