force-app/main/default/objects/Checklist__c/fields/Co_Institution_1__c.field-meta.xml
<CustomField>
    <fullName>Co_Institution_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Co-Institution 1 - Name of Co-PI 1 and organization</inlineHelpText>
    <label>Co-Institution 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CRC_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>