force-app/main/default/objects/Checklist__c/fields/Co_Institution_2__c.field-meta.xml
<CustomField>
    <fullName>Co_Institution_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Co-Institution 2- Name of Co-PI 2 and organization</inlineHelpText>
    <label>Co-Institution 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CRC_Checklists2</relationshipName>
    <type>Lookup</type>
</CustomField>