force-app/main/default/objects/Checklist__c/fields/Comments_from_Secretary__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Secretary__c</fullName>
    <label>Comments from Secretary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>