force-app/main/default/objects/Checklist__c/fields/Flexible_Funding_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Funding_Allowance__c</fullName>
    <label>Flexible Funding Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>