force-app/main/default/objects/Checklist__c/fields/Format_for_grants_in_CVs_per_guidelines__c.field-meta.xml
<CustomField>
    <fullName>Format_for_grants_in_CVs_per_guidelines__c</fullName>
    <label>Format for grants in CVs per guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>