force-app/main/default/objects/Checklist__c/fields/GA__c.field-meta.xml
<CustomField>
    <fullName>GA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>