force-app/main/default/objects/Checklist__c/fields/Guidelines_followed_for_References__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_followed_for_References__c</fullName>
    <label>Guidelines followed for References</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>