force-app/main/default/objects/Checklist__c/fields/Guidelines_for_Figures_and_table__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_for_Figures_and_table__c</fullName>
    <label>Guidelines  for Figures and table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>