force-app/main/default/objects/Checklist__c/fields/Investigator__c.field-meta.xml
<CustomField>
    <fullName>Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigator</label>
    <referenceTo>Investigator__c</referenceTo>
    <relationshipName>CRC_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>