force-app/main/default/objects/Checklist__c/fields/Lead_Institution__c.field-meta.xml
<CustomField>
    <fullName>Lead_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead Institution- Name of PI and organization</inlineHelpText>
    <label>Lead Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CRC_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>