force-app/main/default/objects/Checklist__c/fields/LI_Name_and_Organisation__c.field-meta.xml
<CustomField>
    <fullName>LI_Name_and_Organisation__c</fullName>
    <label>PI Name and Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>