force-app/main/default/objects/Checklist__c/fields/Materials_and_consumables__c.field-meta.xml
<CustomField>
    <fullName>Materials_and_consumables__c</fullName>
    <label>Materials and consumables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>