force-app/main/default/objects/Checklist__c/fields/Miscellaneous__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous__c</fullName>
    <label>Miscellaneous</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>