force-app/main/default/objects/Checklist__c/fields/Name_of_Investigator1__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Investigator1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Investigator1</label>
    <referenceTo>Investigator__c</referenceTo>
    <relationshipName>CRC_Checklists2</relationshipName>
    <type>Lookup</type>
</CustomField>