force-app/main/default/objects/Checklist__c/fields/Name_of_Investigator2__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Investigator2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Investigator2</label>
    <referenceTo>Investigator__c</referenceTo>
    <relationshipName>CRC_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>