force-app/main/default/objects/Checklist__c/fields/No_link_with_Commercial_Organizations__c.field-meta.xml
<CustomField>
    <fullName>No_link_with_Commercial_Organizations__c</fullName>
    <label>No link with Commercial Organizations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>