force-app/main/default/objects/Checklist__c/fields/No_Mismatch_in_Calculation__c.field-meta.xml
<CustomField>
    <fullName>No_Mismatch_in_Calculation__c</fullName>
    <label>No Mismatch in Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>