force-app/main/default/objects/Checklist__c/fields/No_Other_Affiliations_any_Investigator__c.field-meta.xml
<CustomField>
    <fullName>No_Other_Affiliations_any_Investigator__c</fullName>
    <label>No Other Affiliations any Investigator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>