force-app/main/default/objects/Checklist__c/fields/Overheads__c.field-meta.xml
<CustomField>
    <fullName>Overheads__c</fullName>
    <formula>(Sub_Total__c  * 10)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overheads</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>