force-app/main/default/objects/Checklist__c/fields/Pending_Applications_other_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Pending_Applications_other_Agencies__c</fullName>
    <label>Pending Applications other Agencies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>