force-app/main/default/objects/Checklist__c/fields/Proposal_within_word_limit__c.field-meta.xml
<CustomField>
    <fullName>Proposal_within_word_limit__c</fullName>
    <label>Proposal within word limit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>