force-app/main/default/objects/Checklist__c/fields/Publications_in_CVs_as_per_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Publications_in_CVs_as_per_Guidelines__c</fullName>
    <label>Publications in CVs as per Guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>