force-app/main/default/objects/Checklist__c/fields/Queries_sent_to_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Queries_sent_to_Applicants__c</fullName>
    <label>Queries sent to Applicants</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>