force-app/main/default/objects/Checklist__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Ref No</label>
    <type>AutoNumber</type>
</CustomField>