force-app/main/default/objects/Checklist__c/fields/Research_Management_plan_Presented__c.field-meta.xml
<CustomField>
    <fullName>Research_Management_plan_Presented__c</fullName>
    <label>Research Management plan Presented</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>