force-app/main/default/objects/Checklist__c/fields/Response_from_Later_Stages__c.field-meta.xml
<CustomField>
    <fullName>Response_from_Later_Stages__c</fullName>
    <label>Response from Later Stages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>