force-app/main/default/objects/Checklist__c/fields/Role_of_all_Investigators__c.field-meta.xml
<CustomField>
    <fullName>Role_of_all_Investigators__c</fullName>
    <label>Role of all Investigators</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>