force-app/main/default/objects/Checklist__c/fields/Salaries_for_PIs__c.field-meta.xml
<CustomField>
    <fullName>Salaries_for_PIs__c</fullName>
    <label>Salaries for PIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>