force-app/main/default/objects/Checklist__c/fields/Salary_for_PIs_not_Requested__c.field-meta.xml
<CustomField>
    <fullName>Salary_for_PIs_not_Requested__c</fullName>
    <label>Salary for PIs not Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>