force-app/main/default/objects/Checklist__c/fields/Satisfactory_Representation_of_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_Representation_of_Milestone__c</fullName>
    <label>Satisfactory Representation of Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>