force-app/main/default/objects/Checklist__c/fields/Source_of_Human_Samples__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Human_Samples__c</fullName>
    <label>Source of Human Samples</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>