force-app/main/default/objects/Checklist__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <formula>Salaries_for_PIs__c  +  Support_Staff_salaries__c  +  Materials_and_consumables__c  +  Animals__c  +  Equipment__c  +  Access_charges__c  +  Miscellaneous__c  +  Travel_costs__c  +  Flexible_Funding_Allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>