force-app/main/default/objects/Checklist__c/fields/Support_Staff_salaries__c.field-meta.xml
<CustomField>
    <fullName>Support_Staff_salaries__c</fullName>
    <label>Support Staff salaries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>