force-app/main/default/objects/Checklist__c/fields/Time_Commitment_Satisfactory__c.field-meta.xml
<CustomField>
    <fullName>Time_Commitment_Satisfactory__c</fullName>
    <label>Time Commitment Satisfactory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>