force-app/main/default/objects/Checklist__c/fields/Travel_costs__c.field-meta.xml
<CustomField>
    <fullName>Travel_costs__c</fullName>
    <label>Travel costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>