force-app/main/default/objects/Checklist__c/recordTypes/CRC_Checklist.recordType-meta.xml
<RecordType>
    <fullName>CRC_Checklist</fullName>
    <active>true</active>
    <label>CRC Checklist</label>
</RecordType>