force-app/main/default/objects/Checklist__c/recordTypes/TSG_Checklist.recordType-meta.xml
<RecordType>
    <fullName>TSG_Checklist</fullName>
    <active>true</active>
    <label>TSG Checklist</label>
</RecordType>